# tikos-utils-os

./: README.md  requirements.txt  setup.cfg
src/tikos-utils-os/: __init__.py  tutils.py
