[metadata]
name = tikos-utils-os
version = 0.1.1
author = Tikos Technologies Ltd
author_email = hello@@tikos.tech
description = A PyCUDA package for memory-efficient, element-wise tensor operations with unequal dimensions (multiplication, division) on the GPU using batch processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tikostech/tikos-utils-os
license = GNU General Public License v3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pycuda